本地缓存和redis缓存封装

--- a/demo_lean/pom.xml
+++ b/demo_lean/pom.xml
@@ -10,6 +10,7 @@
         <module>jvm</module>
         <module>spring</module>
         <module>mybatis</module>
+        <module>cache</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
