--- a/demo_lean/ice_blue/pom.xml
+++ b/demo_lean/ice_blue/pom.xml
@@ -24,4 +24,12 @@
 <!--            <version>2.7.3</version>-->
 <!--        </dependency>-->
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>com.e-iceblue</id>
+            <name>e-iceblue</name>
+            <url>https://repo.e-iceblue.cn/repository/maven-public/</url>
+        </repository>
+    </repositories>
 </project>
