--- a/demo_lean/java_basis/pom.xml
+++ b/demo_lean/java_basis/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>hessian</artifactId>
             <version>4.0.38</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.75.Final</version>
+        </dependency>
     </dependencies>
 
     <properties>
