--- a/demo_lean/pom.xml
+++ b/demo_lean/pom.xml
@@ -71,6 +71,11 @@
             <version>3.6.1</version>
         </dependency>
         <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
             <version>1.21</version>
